# Änderungen an der SQL-Datenbank bitte hier vermerken.
#
# BETA-Phase! Aktuell verwendete Datenbank-Versionen bitte in dieser Datei markieren!
#


# demo002.sql =====================================================================================


ALTER TABLE `core_config` DROP `name`;

ALTER TABLE `core_config` DROP `type` ;

INSERT INTO `core_config` ( `phpname` , `value` ) VALUES ( 'CFG_SKIN', 'demo' );

ALTER TABLE `core_rights` DROP `name`, DROP `beschreibung`;

INSERT INTO `core_config` (`phpname` ,`value`)
VALUES ('CFG_HOME_LABEL', 'Start'),('CFG_HOME_TITLE', 'Startseite');


INSERT INTO `core_config` ( `phpname` , `value` )
	VALUES ( 'CFG_MODULES', 'demo,tethys' );

# DB:Fabian_H -----------------------------------------------------------------
# DB:Fabian_C -----------------------------------------------------------------
	