@@ -1,6 +1,6 @@
 Tethys (Beta)
 =============
 
-Version: 0.5
+Version: 0.5+
 
 Database: demo001.sql + changes
