@@ -38,7 +38,8 @@ $rights=rights_init();
 /*
  * Globale Konfiguration
  */
-include_once CFG_HDDROOT.'/core/config.php';
+$query_cfg=dbio_SELECT("core_config","1","phpname,value");
+foreach ($query_cfg as $cfg) { define($cfg['phpname'],$cfg['value']); }
 
 /*
  * Module
