@@ -22,6 +22,8 @@ VALUES ('CFG_HOME_LABEL', 'Start'),('CFG_HOME_TITLE', 'Startseite');
 INSERT INTO `core_config` ( `phpname` , `value` )
 	VALUES ( 'CFG_MODULES', 'demo,tethys' );
 
-# DB:Fabian_H -----------------------------------------------------------------
 # DB:Fabian_C -----------------------------------------------------------------
-	
+
+INSERT INTO `core_config` (`phpname` ,`value`)VALUES ('CFG_HOME_URL', '');
+
+# DB:Fabian_H -----------------------------------------------------------------
